# auto_algorama

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  imgui.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
docs/: RELEASING.md
exec/: auto_algorama.cpp
include/common/: log.h  types.h
include/functions/: activation_functions.h  discrete_activation.h  functions.h  sigmoid.h  softmax.h
include/windows/: main_window.h
src/windows/: main_window.cpp
tests/: CMakeLists.txt  test_functions.cpp
